<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@drawable/bgpattern">
	
   <!-- Header content starts here -->
   <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:id="@+id/upperpart"
    android:orientation="vertical">
    
    <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/headerred">
        
        	<ImageView 
        	    android:id="@+id/logo"
        	    android:layout_width="50dp"
        	    android:layout_height="50dp"
        	    android:layout_centerVertical="true"
        	    android:layout_marginLeft="10dp"
        	    android:padding="10dp"
        	    android:src="@drawable/app_icon_actionbar"
        	    android:contentDescription="@string/logo"/>
        	
        	<TextView 
        	    android:id="@+id/title"
        	    android:layout_toRightOf="@+id/logo"
        	    android:layout_width="wrap_content"
        	    android:layout_height="wrap_content"
        	    android:text="@string/app_name"
        	    android:textSize="20dp"
        	    android:layout_centerVertical="true"
        	    android:textColor="@color/white"/>
        	<ImageView 
        	    android:id="@+id/newgame"
        	    android:layout_width="30dp"
        	    android:layout_height="30dp"
        	    android:layout_toLeftOf="@+id/menubar"
        	    android:layout_centerVertical="true"
        	    android:layout_marginRight="10dp"
        	    android:src="@drawable/new_game"
        	    android:contentDescription="@string/logo"
        	    android:visibility="gone"/>
        	
        	<ImageView 
        	    android:id="@+id/menubar"
        	    android:layout_width="30dp"
        	    android:layout_height="30dp"
        	    android:layout_alignParentRight="true"
        	    android:layout_centerVertical="true"
        	    android:layout_marginRight="5dp"
        	    android:src="@drawable/menu_options"
        	    android:contentDescription="@string/logo"
        	    android:visibility="gone"/>
        
    </RelativeLayout>
    
    <LinearLayout 
        android:id="@+id/repeatingpart"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/header_pattern"
        android:orientation="horizontal">
        
    </LinearLayout>
 </LinearLayout>
   
   <!-- Header Content ends her -->
   
   
   <!-- Setting Part starts here -->
   <RelativeLayout 
     android:id="@+id/playerLayout"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:layout_below="@+id/upperpart"
     android:layout_marginTop="20dp"
     android:layout_marginLeft="20dp"
     android:layout_marginRight="20dp"
     android:background="@drawable/optionbg"
     android:padding="10dp">
    
       <TextView 
           android:id="@+id/TVplayerdet"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_centerVertical="true"
           android:text="@string/numberofplayer"
           android:textSize="18dp"
           android:textColor="@color/black"/>

       <Spinner
           android:id="@+id/Spinner_playerNo"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignParentTop="true"
           android:layout_marginLeft="35dp"
           android:layout_toRightOf="@+id/TVplayerdet"
           />
       
   </RelativeLayout>
   
   <RelativeLayout 
     android:id="@+id/pointvaluesetting"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:layout_below="@+id/playerLayout"
     android:layout_marginTop="5dp"
     android:layout_marginLeft="20dp"
     android:layout_marginRight="20dp"
     android:background="@drawable/optionbg"
     android:padding="10dp">
    
       <TextView 
           android:id="@+id/TVinfo"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/valueofpoint"
           android:textSize="15dp"
           android:textColor="@color/black"/>
       
		<TextView 
           android:id="@+id/TVinfo2"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_below="@+id/TVinfo"
           android:layout_marginLeft="40dp"
           android:layout_marginTop="5dp"
           android:text="@string/one"
           android:textSize="30dp"
           android:textColor="@color/black"/>
		<TextView 
           android:id="@+id/TVinfo3"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_toRightOf="@+id/TVinfo2"
           android:layout_alignBottom="@+id/TVinfo2"
           android:text="@string/point"
           android:textSize="20dp"
           android:textColor="@color/black"/>
		
		<EditText 
           android:id="@+id/EDpointvalue"
           android:layout_width="100dp"
           android:layout_height="wrap_content"
           android:layout_toRightOf="@+id/TVinfo3"
           android:layout_alignTop="@+id/TVinfo2"
           android:layout_marginLeft="30dp"
           android:textSize="20dp"
           android:inputType="numberDecimal"/>
		
		<TextView 
           android:id="@+id/TVinfo4"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_below="@+id/EDpointvalue"
           android:layout_alignRight="@+id/EDpointvalue"
           android:layout_marginBottom="10dp"
           android:text="@string/enteramounincurrency"
           android:textSize="10dp"
           android:textColor="@color/black"/>
		
      
   </RelativeLayout>
   

     <RelativeLayout
         android:id="@+id/gamemode"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/pointvaluesetting"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginTop="5dp"
         android:background="@drawable/optionbg"
         android:padding="5dp" >

         <TextView
             android:id="@+id/TVinfo6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/gamemode"
             android:textSize="15dp"
          	 android:textColor="@color/black" />

         <RadioGroup
             android:id="@+id/Gamemode_radioGroup"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_toRightOf="@+id/TVinfo6" >

             <RadioButton
                 android:id="@+id/radioButton1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/Freepoint"
                 android:checked="true" 
           		 android:textColor="@color/black"/>

             <RadioButton
                 android:id="@+id/radioButton2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/Fixedpoint"
         		 android:textColor="@color/black" />
         </RadioGroup>

         <EditText
             android:id="@+id/lowerlimit"
             android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:layout_alignLeft="@+id/TVinfo6"
             android:layout_below="@+id/Gamemode_radioGroup"
             android:ems="10"
             android:hint="@string/lowerlimit"
             android:inputType="number"
             android:textSize="15dp" 
             android:enabled="false"/>

         <EditText
             android:id="@+id/upperlimit"
             android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:layout_below="@+id/Gamemode_radioGroup"
             android:layout_marginLeft="15dp"
             android:layout_toRightOf="@+id/lowerlimit"
             android:ems="10"
             android:hint="@string/upperlimit"
             android:inputType="number"
             android:textSize="15dp" 
             android:enabled="false"/>
         
     </RelativeLayout>
   
   <!-- setting part ends here -->

     <Button
         android:id="@+id/continueButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/gamemode"
         android:layout_alignRight="@+id/gamemode"
         android:layout_marginTop="10dp"
         android:layout_below="@+id/gamemode"
         android:text="@string/Continue" 
         android:textSize="30dp"
         android:textColor="@color/white"
         android:padding="5dp"
         android:background="@drawable/blue_gradient"
         android:drawableRight="@drawable/arrow"/>

</RelativeLayout>
