<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@drawable/bgpattern">
	
   <!-- Header content starts here -->
   <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:id="@+id/upperpart"
    android:orientation="vertical">
    
    <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/headerred">
        
        	<ImageView 
        	    android:id="@+id/logo"
        	    android:layout_width="50dp"
        	    android:layout_height="50dp"
        	    android:layout_centerVertical="true"
        	    android:layout_marginLeft="10dp"
        	    android:padding="10dp"
        	    android:src="@drawable/app_icon_actionbar"
        	    android:contentDescription="@string/logo"/>
        	
        	<TextView 
        	    android:id="@+id/title"
        	    android:layout_toRightOf="@+id/logo"
        	    android:layout_width="wrap_content"
        	    android:layout_height="wrap_content"
        	    android:text="@string/app_name"
        	    android:textSize="20dp"
        	    android:layout_centerVertical="true"
        	    android:textColor="@color/white"/>
        	<ImageView 
        	    android:id="@+id/newgame"
        	    android:layout_width="30dp"
        	    android:layout_height="30dp"
        	    android:layout_toLeftOf="@+id/menubar"
        	    android:layout_centerVertical="true"
        	    android:layout_marginRight="10dp"
        	    android:src="@drawable/new_game"
        	    android:contentDescription="@string/logo"
        	    android:visibility="gone"/>
        	
        	<ImageView 
        	    android:id="@+id/menubar"
        	    android:layout_width="30dp"
        	    android:layout_height="30dp"
        	    android:layout_alignParentRight="true"
        	    android:layout_centerVertical="true"
        	    android:layout_marginRight="5dp"
        	    android:src="@drawable/menu_options"
        	    android:contentDescription="@string/logo"
        	    android:visibility="gone"/>
        
    </RelativeLayout>
    
    <LinearLayout 
        android:id="@+id/repeatingpart"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/header_pattern"
        android:orientation="horizontal">
        
    </LinearLayout>
 </LinearLayout>
   
   <!-- Header Content ends her -->
   
   
   <!-- Setting Part starts here -->
   
   <ScrollView 
      android:id="@+id/playernameentry"
      android:layout_width="fill_parent"
      android:layout_height="320dp"
      android:layout_marginTop="20dp"
      android:layout_marginLeft="20dp"
      android:layout_marginRight="20dp"
      android:layout_below="@+id/upperpart"
      android:background="@drawable/optionbg" >
    
   <RelativeLayout 
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:padding="10dp">
    
       <TextView 
           android:id="@+id/TVinfo21"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_centerHorizontal="true"
           android:text="@string/enterplayersname"
           android:textSize="13dp"
           android:textColor="@color/black"/>
       
	       <LinearLayout
	           android:layout_width="fill_parent"
	    	   android:layout_height="wrap_content" 
	    	   android:id="@+id/playernameentrylist"
	    	   android:layout_marginTop="10dp"
	    	   android:layout_below="@+id/TVinfo21"
	    	   android:orientation="vertical">
	           
	       </LinearLayout>
     
   		</RelativeLayout>
     </ScrollView>
  

     <Button
         android:id="@+id/continueButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/playernameentry"
         android:layout_alignRight="@+id/playernameentry"
         android:layout_marginTop="10dp"
         android:layout_below="@+id/playernameentry"
         android:text="@string/Continue" 
         android:textSize="30dp"
         android:textColor="@color/white"
         android:paddingTop="5dp"
         android:paddingLeft="5dp"
         android:paddingBottom="5dp"
         android:paddingRight="10dp"  
         android:background="@drawable/blue_gradient"
         android:drawableRight="@drawable/arrow"/>

</RelativeLayout>
