<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@drawable/bgpattern">

    <RelativeLayout
        android:id="@+id/upred"
        android:layout_width="fill_parent"
        android:layout_height="250dp"
        android:layout_alignParentTop="true"
        android:background="@color/headerred">
        
        <ImageView
            android:id="@+id/logoofapp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/app_icon_start"
            android:contentDescription="@string/app_name"
            android:layout_centerInParent="true" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logoofapp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="18dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="25dp" />

    </RelativeLayout>
    
     <LinearLayout 
        android:id="@+id/repeatingpart"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/upred"
        android:background="@drawable/header_pattern"
        android:orientation="horizontal">
        
    </LinearLayout>
    
      <RelativeLayout
        android:id="@+id/down_option"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/repeatingpart">

          <Button
              android:id="@+id/startgame_button"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_marginLeft="30dp"
              android:layout_marginRight="30dp"
              android:layout_marginTop="40dp"
              android:text="@string/startnewgame" 
	         android:textSize="20dp"
	         android:textColor="@color/white"
	         android:paddingRight="10dp"
	         android:paddingBottom="15dp"
	         android:paddingTop="15dp"
	         android:background="@drawable/blue_gradient"
	         android:drawableRight="@drawable/arrow" />
          
          <Button
              android:id="@+id/continuegame_button"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_below="@+id/startgame_button"
              android:layout_alignLeft="@+id/startgame_button"
              android:layout_alignRight="@+id/startgame_button" 
              android:layout_marginTop="30dp"       
              android:text="@string/ContinuePREVIOUS" 
		         android:textSize="20dp"
		         android:textColor="@color/white"
		         android:paddingRight="10dp"
		         android:paddingBottom="15dp"
		         android:paddingTop="15dp"
		         android:background="@drawable/black_gradient"
		         android:drawableRight="@drawable/arrow" />

          <TextView
              android:id="@+id/notification"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:padding="5dp"
              android:layout_below="@+id/continuegame_button"
              android:layout_centerHorizontal="true" />

    </RelativeLayout>

</RelativeLayout>
