<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scorecardParent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@drawable/bgpattern">
	
   <!-- Header content starts here -->
   <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:id="@+id/upperpart"
    android:orientation="vertical">
    
    <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/headerred">
        
        	<ImageView 
        	    android:id="@+id/logo"
        	    android:layout_width="50dp"
        	    android:layout_height="50dp"
        	    android:layout_centerVertical="true"
        	    android:layout_marginLeft="2dp"
        	    android:padding="10dp"
        	    android:src="@drawable/app_icon_actionbar"
        	    android:contentDescription="@string/logo"/>
        	
        	<TextView 
        	    android:id="@+id/title"
        	    android:layout_toRightOf="@+id/logo"
        	    android:layout_width="wrap_content"
        	    android:layout_height="wrap_content"
        	    android:text="@string/app_name_without"
        	    android:textSize="20dp"
        	    android:layout_centerVertical="true"
        	    android:textColor="@color/white"/>
        	<ImageView 
        	    android:id="@+id/adduser"
        	    android:layout_width="30dp"
        	    android:layout_height="30dp"
        	    android:layout_toLeftOf="@+id/menubar"
        	    android:layout_centerVertical="true"
        	    android:layout_marginRight="10dp"
        	    android:src="@drawable/new_game"
        	    android:contentDescription="@string/logo"
        	    android:visibility="visible"/>
        	
        	<ImageView 
        	    android:id="@+id/menubar"
        	    android:layout_width="30dp"
        	    android:layout_height="30dp"
        	    android:layout_alignParentRight="true"
        	    android:layout_centerVertical="true"
        	    android:layout_marginRight="8dp"
        	    android:src="@drawable/share_icon"
        	    android:contentDescription="@string/logo"
        	    android:visibility="visible"/>
        
    </RelativeLayout>
    
    <LinearLayout 
        android:id="@+id/repeatingpart"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/header_pattern"
        android:orientation="horizontal">
        
    </LinearLayout>
 </LinearLayout>
   
   <!-- Header Content ends her -->

  <!-- Score Board Starts here -->
  <TextView 
      android:id="@+id/Scoreboard_title"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:paddingLeft="15dp"
      android:paddingTop="4dp"
      android:paddingBottom="4dp"
      android:layout_below="@+id/upperpart"
      android:text="@string/scoreboard"
      android:textSize="14dp"
      android:textColor="@color/black"
      android:background="@color/GRAY"
      android:layout_marginTop="10dp"/>
  


  <RelativeLayout
      android:id="@+id/scorelayout"
      android:layout_width="fill_parent"
      android:layout_height="match_parent"
      android:layout_above="@+id/buttonLayout"
      android:layout_below="@+id/Scoreboard_title"
      android:background="@color/white"
      android:orientation="vertical"
      android:paddingLeft="15dp"
      android:paddingRight="15dp" >

      <!-- Header of score board -->
      <TableLayout
          android:id="@+id/scoreboard_header"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="5dp"
          android:layout_marginBottom="5dp" >

           <TableRow 
              android:id="@+id/row_header"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content">
              
              <TextView 
                  android:id="@+id/roundTV"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:text="Round"
                  android:textColor="@color/brown"
                  android:layout_weight="1"
                  android:textSize="12dp"/>
              
      		</TableRow>
         
         
      </TableLayout>
     
     <!-- Scores in score board --> 

     <ScrollView
         android:id="@+id/scoreboard_body_scroll"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_above="@+id/scoreboard_footer"
         android:layout_below="@+id/scoreboard_header"
         android:background="@color/GRAY" >

	      <TableLayout
	          android:id="@+id/scoreboard_body"
	          android:layout_width="fill_parent"
	          android:layout_height="wrap_content"
	          android:background="@drawable/tablegrid" >
	
	                  
	      </TableLayout>
      </ScrollView>
    
      <!-- Footer of score board --> 

      <TableLayout
          android:id="@+id/scoreboard_footer"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:layout_alignParentBottom="true"
           >

          <TableRow
              android:id="@+id/row_footer"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:paddingBottom="5dp"
          android:paddingTop="5dp" >
              
              <TextView 
                  android:id="@+id/totalTV"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:text="Total"
                  android:textSize="16dp"
                  android:textColor="@color/brown"
                  android:layout_weight="1"/>
              
              
          </TableRow>
         
      </TableLayout>
          
  </RelativeLayout>
  
  <LinearLayout 
      android:id="@+id/buttonLayout"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true">
      	<Button 
      	    android:id="@+id/Button_endgame"
      	    android:layout_width="0dp"
      	    android:layout_height="70dp"
      	    android:background="@color/black"
      	    android:drawableLeft="@drawable/end_game"
      	    android:paddingLeft="20dp"
      	    android:paddingRight="40dp"
      	    android:paddingBottom="10dp"
      	    android:text="@string/endgame"
      	    android:textColor="@color/white"
      	    android:layout_weight="1"/>
      	<Button 
      	    android:id="@+id/Button_addscore"
      	    android:layout_width="0dp"
      	    android:layout_height="70dp"
      	    android:background="@drawable/addscore_gradient"
      	    android:drawableLeft="@drawable/add_score"
      	    android:paddingLeft="20dp"
      	    android:drawableRight="@drawable/arrow_small"
      	    android:paddingRight="10dp"
      	    android:paddingBottom="10dp"
      	    android:text="@string/addscore"
      	    android:layout_weight="1"
      	    android:textColor="@color/white"/>
      
  </LinearLayout>
  
  <!-- Score Board Ends here -->
</RelativeLayout>
